--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node Server/index.js",
     "dev": "nodemon Server/index.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "build": "npm install && npm install --prefix Client && npm run build --prefix Client"
   },
   "keywords": [],
   "author": "",
